--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "laravel/framework": "^8.12",
         "laravel/scout": "^8.6",
         "laravel/tinker": "^2.5",
-        "laravelium/sitemap": "^8.0"
+        "laravelium/sitemap": "^8.0",
+        "teamtnt/laravel-scout-tntsearch-driver": "^11.1",
+        "teamtnt/tntsearch": "^2.6"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
