--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
         "laravelium/sitemap": "^8.0",
+        "predis/predis": "^2.2",
         "teamtnt/laravel-scout-tntsearch-driver": "^11.1",
         "teamtnt/tntsearch": "^2.6"
     },
