--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/ui": "^3.2",
         "laravelium/sitemap": "^8.0",
         "predis/predis": "^2.2",
+        "spatie/laravel-data": "^2.2",
         "teamtnt/laravel-scout-tntsearch-driver": "^11.1",
         "teamtnt/tntsearch": "^2.6"
     },
